# glato

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  SECURITY.md  pyproject.toml  run_e2e_tests.sh
.github/workflows/: build_exe.yml
docs/: gitlab_runners_implementation.md  testing_e2e_guide.md  testing_e2e_overview.md  testing_infrastructure.md
e2e_test/: __init__.py  conftest.py  conftest_gitlab_saas.py  pytest-runners.ini  pytest.ini  test_saas_archived_projects.py  test_saas_infrastructure.py  test_saas_ppe.py  test_saas_project_enumeration.py  test_saas_runner_tag_parsing.py  test_saas_runners.py  test_saas_token_enumeration.py  test_selfhosted_archived_projects.py  test_selfhosted_group_secrets.py  test_selfhosted_hierarchical_access.py  test_selfhosted_project_enumeration.py  test_selfhosted_runner_tag_parsing.py  test_selfhosted_runners.py  test_selfhosted_token_enumeration.py
e2e_test/glato/config/: cookies.json
glato/: main.py
glato/cli/: cli.py
glato/enumerate/: enumerate.py
glato/gitlab/: api.py
